tests/baselines/reference/decoratorOnClassMethod12.errors.txt
tests/cases/conformance/decorators/class/method/decoratorOnClassMethod12.ts(6,10): error TS2338: 'super' property access is permitted only in a constructor, member function, or member accessor of a derived class.


==== tests/cases/conformance/decorators/class/method/decoratorOnClassMethod12.ts (1 errors) ====
    module M {
        class S {
            decorator(target: Object, key: string): void { }
        }
        class C extends S {
            @super.decorator
             ~~~~~
!!! error TS2338: 'super' property access is permitted only in a constructor, member function, or member accessor of a derived class.
            method() { }
        }
    }